@@ -1,6 +1,7 @@
 require 'gecoder/interface/binding_changes'
 require 'gecoder/interface/enum_matrix'
 require 'gecoder/interface/model'
+require 'gecoder/interface/mixin'
 require 'gecoder/interface/search'
 require 'gecoder/interface/constraints'
 require 'gecoder/interface/variables'
