@@ -1,3 +1,7 @@
+== Next version
+
+* Added Gecode::Mixin which can be mixed in rather than inheriting from Gecode::Model. Thanks to Adam Rose for the suggestion.
+
 == Version 0.9.0
 This release adds a generous amount of sugar designed to cut down on often 
 repeated code. It also adds the ability to freely combine constraints
